[gd_scene load_steps=7 format=3 uid="uid://djevfhk7g786q"]

[ext_resource type="Script" path="res://Components/Menu/menu.gd" id="1_f1mdv"]
[ext_resource type="Texture2D" uid="uid://cb6h6gxeyt1tp" path="res://Resources/Themes/Images/AppIcon.png" id="1_g0bud"]
[ext_resource type="Texture2D" uid="uid://c7ptdrt4feo5s" path="res://Resources/Themes/Images/SettingsIcon.png" id="2_bn1th"]
[ext_resource type="Texture2D" uid="uid://f4tf0xoym1vv" path="res://Resources/Themes/Images/AddIcon.png" id="3_rromo"]
[ext_resource type="Texture2D" uid="uid://cdacwp2mqwy4b" path="res://Resources/Themes/Images/HomeIcon.png" id="4_eqqd4"]
[ext_resource type="Texture2D" uid="uid://dj7rdi34px4vh" path="res://Resources/Themes/Images/ArtPromptIcon.png" id="5_7lxcu"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f1mdv")

[node name="Top" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Banner" type="ColorRect" parent="Top"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0, 0.239216, 0.141176, 1)

[node name="LineColour" type="ColorRect" parent="Top/Banner"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.960784, 0.94902, 0.894118, 1)

[node name="AppIcon" type="TextureRect" parent="Top/Banner"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -27.0
offset_right = 54.0
offset_bottom = 27.0
grow_vertical = 2
texture = ExtResource("1_g0bud")
expand_mode = 1

[node name="SettingsButton" type="TextureButton" parent="Top/Banner"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -27.0
offset_bottom = 27.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("2_bn1th")
ignore_texture_size = true
stretch_mode = 0

[node name="Bot" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0

[node name="Banner" type="ColorRect" parent="Bot"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0, 0.239216, 0.141176, 1)

[node name="LineColour" type="ColorRect" parent="Bot/Banner"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0.960784, 0.94902, 0.894118, 1)

[node name="AddButton" type="TextureButton" parent="Bot/Banner"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -27.0
offset_right = 54.0
offset_bottom = 27.0
grow_vertical = 2
texture_normal = ExtResource("3_rromo")
ignore_texture_size = true
stretch_mode = 0

[node name="HomeButton" type="TextureButton" parent="Bot/Banner"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -27.0
offset_right = 27.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_eqqd4")
ignore_texture_size = true
stretch_mode = 0

[node name="ArtPromptButton" type="TextureButton" parent="Bot/Banner"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -27.0
offset_bottom = 27.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("5_7lxcu")
ignore_texture_size = true
stretch_mode = 0

[connection signal="button_up" from="Top/Banner/SettingsButton" to="." method="_on_settings_button_button_up"]
[connection signal="button_up" from="Bot/Banner/AddButton" to="." method="_on_add_button_button_up"]
[connection signal="button_up" from="Bot/Banner/HomeButton" to="." method="_on_home_button_button_up"]
[connection signal="button_up" from="Bot/Banner/ArtPromptButton" to="." method="_on_art_prompt_button_button_up"]
